--- a/index.html
+++ b/index.html
@@ -3,42 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Portfolio de Youssouf Faye</title>
+    <title>[Ton Nom] - Data Scientist</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        Portfolio de Youssouf Faye
-    </header>
-    <section>
-        <div class="container">
-            <h1>Bienvenue !</h1>
-            <p>Je suis Youssouf Faye, data scientist passionné par l'IA et les multivers.</p>
-        </div>
-    </section>
-    <section>
-        <div class="container">
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Youssouf Faye</h1>
+            <h2>Je suis Youssouf Faye, data scientist passionné par l'IA et les multivers.</h2>
+            <div class="neural-network"></div> <!-- Placeholder pour le réseau neuronal -->
             <h2>À propos de moi</h2>
             <p>Passionné par les sciences, la philosophie et l'élégance des véhicules.</p>
+            <p class="summary">Spécialisé en Python, R, SQL et machine learning, je transforme les données en insights exploitables.</p>
+            <div class="nav-buttons">
+                <a href="#about" class="btn">À propos</a>
+                <a href="#projects" class="btn">Projets</a>
+                <a href="#contact" class="btn">Contact</a>
+            </div>
         </div>
-    </section>
-    <section>
-        <div class="container">
-            <h2>Mes Projets</h2>
-            <ul>
-                <li><a href="#">Projet 1</a></li>
-                <li><a href="#">Projet 2</a></li>
-            </ul>
-        </div>
-    </section>
-    <section>
-        <div class="container">
-            <h2>Contact</h2>
-            <p>Vous pouvez me contacter à : <a href="mailto:contact@youssouf.com">contact@youssouf.com</a></p>
-        </div>
-    </section>
-    <footer>
-        © 2025 Youssouf Faye - Tous droits réservés.
-    </footer>
+    </header>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
+    <script src="sketch.js"></script>
 </body>
 </html>
