--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
             </div>
         </div>
     </header>
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/youssouf-faye-a32297309/" target="_blank" class="social-icon" title="Mon profil LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="htpps://kaggle.com/yussuffaye" target="_blank" class="social-icon" title="Mon profil Kaggle">
+                <i class="fab fa-kaggle"></i>
+            </a>
+            <a href="https://github.com/YUSSUF07" target="_blank" class="social-icon" title="Mon profil GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <p>© 2025 YUSSUF07. Tous droits réservés.</p>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
     <script src="script.js"></script>
