--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Ton Nom] - Data Scientist</title>
+    <title>Youssouf Faye - Data Scientist</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome pour les icônes -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header class="hero">
         <div class="hero-content">
             <h1>Youssouf Faye</h1>
             <h2>Je suis Youssouf Faye, data scientist passionné par l'IA et les multivers.</h2>
-            <div class="neural-network"></div> <!-- Placeholder pour le réseau neuronal -->
+            <div id="neural-network"></div> <!-- ID pour p5.js -->
             <h2>À propos de moi</h2>
             <p>Passionné par les sciences, la philosophie et l'élégance des véhicules.</p>
             <p class="summary">Spécialisé en Python, R, SQL et machine learning, je transforme les données en insights exploitables.</p>
@@ -28,14 +30,14 @@
             <a href="https://www.linkedin.com/in/youssouf-faye-a32297309/" target="_blank" class="social-icon" title="Mon profil LinkedIn">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <a href="htpps://kaggle.com/yussuffaye" target="_blank" class="social-icon" title="Mon profil Kaggle">
+            <a href="https://www.kaggle.com/yussuffaye" target="_blank" class="social-icon" title="Mon profil Kaggle">
                 <i class="fab fa-kaggle"></i>
             </a>
             <a href="https://github.com/YUSSUF07" target="_blank" class="social-icon" title="Mon profil GitHub">
                 <i class="fab fa-github"></i>
             </a>
         </div>
-        <p>© 2025 YUSSUF07. Tous droits réservés.</p>
+        <p>© 2025 Y USSUF07. Tous droits réservés.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
