--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
     <title>Youssouf Faye - Data Scientist</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome pour les icônes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header class="hero">
         <div class="hero-content">
+            <img src="yusuf.jpg" alt="Youssouf Faye" class="profile-pic">
             <h1>Youssouf Faye</h1>
-            <h2>Je suis Youssouf Faye, data scientist passionné par l'IA et les multivers.</h2>
-            <div id="neural-network"></div> <!-- ID pour p5.js -->
-            <h2>À propos de moi</h2>
-            <p>Passionné par les sciences, la philosophie et l'élégance des véhicules.</p>
+            <h2>Data Scientist</h2>
+            <div id="neural-network"></div>
+            <p>Je suis un data scientist passionné par l’IA, les multivers, les sciences, la philosophie et l’élégance des véhicules.</p>
             <p class="summary">Spécialisé en Python, R, SQL et machine learning, je transforme les données en insights exploitables.</p>
             <div class="nav-buttons">
-                <a href="#about" class="btn">À propos</a>
-                <a href="#projects" class="btn">Projets</a>
-                <a href="#contact" class="btn">Contact</a>
+                <a href="about.html" class="btn">À propos</a>
+                <a href="skills.html" class="btn">Projets</a>
+                <a href="contact.html" class="btn">Contact</a>
             </div>
         </div>
     </header>
+
     <footer class="footer">
         <div class="social-links">
             <a href="https://www.linkedin.com/in/youssouf-faye-a32297309/" target="_blank" class="social-icon" title="Mon profil LinkedIn">
@@ -37,7 +37,7 @@
                 <i class="fab fa-github"></i>
             </a>
         </div>
-        <p>© 2025 Y USSUF07. Tous droits réservés.</p>
+        <p>© 2025 YUSSUF07. Tous droits réservés.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
