--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <h1>Contact</h1>
         <p>Vous pouvez me contacter via :</p>
         <ul class="contact-list">
-            <li>Email : <a href="mailto:youssouf@example.com" class="contact-link">youssouf@example.com</a></li>
+            <li>Email : <a href="mailto:yussuf07@gmail.com" class="contact-link">yussuf07@gmail.com</a></li>
             <li>LinkedIn : <a href="https://www.linkedin.com/in/youssouf-faye-a32297309/" class="contact-link">Mon profil</a></li>
         </ul>
         <a href="index.html" class="btn">Retour à l'accueil</a>
